assets/css/packages/s11-floating-links.css
.s11-floating-links,
.s11-floating-links::before,
.s11-floating-links::after,
.s11-floating-links *,
.s11-floating-links *::before,
.s11-floating-links *::after {
	box-sizing: border-box;
}

.s11-floating-links {
	position: fixed;
	right: 48px;
	bottom: 48px;
	z-index: 1000;
	display: none;
	flex-direction: column;
	align-items: flex-end;
	gap: 16px;
}

.s11-svg-wrapper {
	display: flex;
}

.s11-floating-links.s11-fadein,
.s11-floating-links.s11-fading {
	display: flex;
}

.s11-floating-links-logo-icon {
	position: relative;
	display: flex;
	align-items: center;
	justify-content: center;
	width: 64px;
	height: 64px;
	padding: 12px;
	background-color: #fff;
	border: 1px solid #f2f4f7;
	border-radius: 50%;
	box-shadow: 0 11px 22px -5px rgba(16, 24, 40, 0.18);
	cursor: pointer;
}

.s11-floating-links-nav-menu {
	display: none;
	grid-template-columns: 1fr;
	background-color: #fff;
	padding: 16px;
	border: 1px solid #f2f4f7;
	border-radius: 8px;
	box-shadow: 0 11px 22px -5px rgba(16, 24, 40, 0.18);
}

.s11-floating-links-nav-item {
	position: relative;
	display: flex;
	align-items: center;
	justify-content: space-between;
	gap: 8px;
	margin: 16px 0;
	text-decoration: none;
	z-index: 1;
}

.s11-floating-links-nav-item:first-child {
	margin-top: 0;
}

.s11-floating-links-nav-item:last-child {
	margin-bottom: 0;
}

.s11-floating-links-nav-item:focus {
	outline: 0;
	box-shadow: none;
}

.s11-floating-links-nav-item::before {
	content: '';
	position: absolute;
	top: -4px;
	left: -6px;
	width: calc(100% + 12px);
	height: calc(100% + 8px);
	z-index: 0;
	border-radius: 8px;
	background-color: transparent;
	transition: background-color 240ms ease-in;
	cursor: pointer;
}

.s11-floating-links-nav-item:hover::before {
    background-color: var(--floating-links-bg-hover-color);
}

.s11-floating-links-nav-text {
	font-size: 0.875rem;
	line-height: 1.25rem;
	color: #1D2939;
	font-weight: 500;
	z-index: 2;
	transition: color 240ms ease-out;
}

.s11-floating-links-nav-item:hover .s11-floating-links-nav-text {
    color: var(--floating-links-hover-color);
}

.s11-floating-links-nav-icon {
	display: flex;
	z-index: 2;
}

.s11-floating-links-nav-icon > svg path {
	transition: stroke 240ms ease-out;
}

.s11-floating-links-nav-item:hover .s11-floating-links-nav-icon > svg path {
    stroke: var(--floating-links-hover-color);
}

.s11-fadein {
	display: block;
	animation: fadeInUp 240ms ease-in-out forwards;
}

.s11-fadeout {
	display: none;
	animation: fadeOutDown 240ms ease-in-out forwards;
}

.s11-fading {
	display: block;
}

@keyframes fadeInUp {
	0% {
		opacity: 0;
		transform: translateY(20px);
	}
	100% {
		opacity: 1;
		transform: translateY(0);
	}
}

@keyframes fadeOutDown {
	0% {
		opacity: 1;
		transform: translateY(0);
	}
	100% {
		opacity: 0;
		transform: translateY(20px);
	}
}

/* Notifications */
.s11-notifications-count {
	position: absolute;
	display: flex;
	align-items: center;
	justify-content: center;
	width: 20px;
	height: 20px;
	border-radius: 20px;
	font-size: 12px;
	font-weight: 600;
	line-height: 18px;
	color: #fff;
	background: #FF3C3C;
	z-index: 9;
}

.s11-floating-links-logo-icon .s11-notifications-count {
	top: 0;
	right: 0;
}

.s11-show-close-icon .s11-notifications-count {
	display: none;
}

.s11-notifications-icon .s11-notifications-count {
    bottom: 13px;
    right: -6px
}

/* Breakpoints */
@media only screen and (max-width: 782px) {
	.s11-floating-links {
		right: 20px;
		bottom: 20px;
	}

	.s11-floating-links-logo-icon {
		width: 50px;
		height: 50px;
	}
}

